# django-api-frameworks

./: CHANGELOG.md  docker-compose.yml  justfile  pyproject.toml  readme.md
django/: Dockerfile  pyproject.toml
django-bolt/: Dockerfile  pyproject.toml
django-bolt-example/: Dockerfile
django-bolt-example/car/: api.py
django-bolt-example/config/: api.py
django-bolt/car/: api.py
django-bolt/config/: settings.py
django-example/: Dockerfile
django-example/car/: asyncpg_manager.py
django-example/config/: settings.py
django-ninja/: Dockerfile  conftest.py  pyproject.toml
django-ninja-example/: Dockerfile
django-ninja-example/car/: tests.py
django-ninja/car/: views.py
django-ninja/config/: settings.py  urls.py
django-rapid/: Dockerfile  pyproject.toml
django-rapid-example/: Dockerfile
django-rapid-example/car/: schemas.py  views.py
django-rapid-example/config/: settings.py
django-rapid/car/: schemas.py  views.py
django-shinobi/: Dockerfile  custom_renderer.py  pyproject.toml
django-shinobi-example/: Dockerfile
django-shinobi-example/config/: settings.py  urls.py
django/car/: urls.py  (+1 more)
djangorestframework/: Dockerfile  custom_response.py  pyproject.toml
djangorestframework-example/: Dockerfile
djrest2/: Dockerfile  pyproject.toml
djrest2-example/: Dockerfile
djrest2/car/: forms.py  tests.py  views.py
djrest2/config/: settings.py  urls.py
docs/: readme.md
fastapi/: Dockerfile  database.py  database_test.py  main.py  pyproject.toml
fastapi-example/: Dockerfile
load-testing/: Dockerfile  locustfile.py  pyproject.toml
(+23 files in other folders)
